# api-wordle

./: .gitignore  Cargo.toml  Dockerfile  build.rs  diesel.toml  rust-toolchain.toml
.github/workflows/: build_and_update.yml  release.yml
entity/: Cargo.toml
entity/src/: lib.rs
entity/src/entities/: histories.rs  mod.rs  prelude.rs  puzzles.rs  sessions.rs
entity/src/types/: matched.rs  matches.rs  mod.rs  puzzle_date.rs  puzzle_solution.rs  submit_history.rs  submit_letter.rs  submit_word.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250817_081620_alter_table.rs
migrations/2025-08-12-083502_puzzles/: down.sql  up.sql
migrations/2025-08-12-161600_puzzles/: down.sql  up.sql
migrations/2025-08-14-102221_user_data/: down.sql  up.sql
src/: config.rs  env.rs  logging.rs  main.rs  schema.rs  sha256.rs  trace.rs
src/database/: mod.rs
src/database/puzzles/: mod.rs
src/database/tables/: histories.rs  mod.rs  puzzles.rs  sessions.rs
src/database/types/: mod.rs  puzzle.rs  puzzle_date.rs  puzzle_solution.rs  puzzle_word.rs
src/endpoint/: mod.rs  root.rs
src/endpoint/auth/: mod.rs
src/endpoint/auth/validate/: mod.rs
src/endpoint/dates/: mod.rs
src/endpoint/generate/: mod.rs
src/endpoint/health/: mod.rs
src/endpoint/internal/: mod.rs
src/endpoint/internal/update/: mod.rs
src/endpoint/internal/update/wordle/: mod.rs
src/endpoint/play/: mod.rs
src/endpoint/play/session/: mod.rs
src/endpoint/play/start/: mod.rs
src/endpoint/play/submit/: mod.rs
src/endpoint/validate/: mod.rs
src/endpoint/wordle/: mod.rs
src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  session.rs
tests/: Cargo.toml
tests/src/: lib.rs  submit_history.rs
