[package]
name = "wordle"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
api-framework = { git = "https://github.com/KessokuTeaTime/api-framework" }
anyhow = "1.0.98"
axum = "0.8.4"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["auth", "trace"] }
tower-layer = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
tracing-appender = "0.2.3"
file-rotate = "0.8.0"
clap = { version = "4.5.44", features = ["cargo"] }
diesel = { version = "2.0", features = ["postgres", "chrono", "r2d2"] }
chrono = { version = "0.4", features = ["serde"] }
diesel_migrations = "2.2.0"
parking_lot = "0.12.4"
reqwest = { version = "0.12.22", features = ["json", "blocking", "stream"] }
r2d2 = "0.8.10"
serde_json = "1.0.142"
rusty_paseto = "0.7.2"
axum-auth = "0.8.1"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
sha2 = "0.10.9"
hex = "0.4.3"
random_word = { version = "0.5.0", features = ["en"] }

[build-dependencies]
anyhow = "1.0.98"
vergen = { version = "9.0.6", features = ["build", "cargo", "rustc", "si"] }

[workspace.lints.rust]
missing-docs = "warn"
missing-debug-implementations = "warn"
let-underscore-drop = "warn"
single-use-lifetimes = "warn"
trivial-numeric-casts = "warn"
elided-lifetimes-in-paths = "deny"
unused-lifetimes = "forbid"
unused-macro-rules = "warn"
unused-qualifications = "warn"
variant-size-differences = "warn"
dyn-drop = "forbid"
ellipsis-inclusive-range-patterns = "forbid"
exported-private-dependencies = "forbid"
uncommon-codepoints = "deny"

[workspace.lints.clippy]
missing-panics-doc = "warn"
missing-errors-doc = "warn"
cloned-instead-of-copied = "warn"
future-not-send = "warn"
if-not-else = "warn"
if-then-some-else-none = "warn"
impl-trait-in-params = "warn"
macro-use-imports = "forbid"
exhaustive-enums = "warn"
str-to-string = "warn"
iter-without-into-iter = "warn"
decimal-literal-representation = "warn"

[profile.release]
opt-level = 3
split-debuginfo = "packed"
strip = "symbols"
lto = true
panic = "unwind"
codegen-units = 1

[lints]
workspace = true
